# ArenaNet

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AuthManager.cpp.4A3D17DD2AAA71C3.idx  AuthManager.h.F2898E04D5630E16.idx  ChatManager.cpp.25B4F7747C120785.idx  ChatManager.h.832649D96A79C429.idx  ConfigManager.cpp.34C634BAB639177A.idx  ConfigManager.h.CEDC81318EB00D43.idx  Connection.cpp.C208F1EB7093A049.idx  Connection.h.25E22EFB2F108893.idx  Error.h.90CA1F7FA8072D56.idx  JwtUtils.cpp.D5D7B51B6255B565.idx  JwtUtils.h.8988AFC4E1401D52.idx  LeaderboardManager.cpp.A40C84487C588632.idx  LeaderboardManager.h.7333C85C2D372B52.idx  Lobby.cpp.1C9AA25D705901F1.idx  Lobby.h.F1F793E5D704B3CC.idx  (+16 more)
client/: ArenaNetUIManager.cs  NetworkClient.cs  gui_client.py  test.py
sdk/ArenaNet.SDK/: ArenaNet.SDK.csproj  ArenaNetClient.cs  AuthService.cs  ChatService.cs  LeaderboardService.cs  LobbyService.cs  MatchmakingService.cs  SocialService.cs
sdk/ArenaNet.SDK.Tests/: ArenaNet.SDK.Tests.csproj  UnitTest1.cs
src/: main.cpp
src/authentication/: AuthManager.cpp  AuthManager.h  JwtUtils.cpp  JwtUtils.h
src/chat/: ChatManager.cpp  ChatManager.h
src/common/: Error.h  Logger.h  Types.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/database/: PostgresClient.cpp  PostgresClient.h
src/friend/: FriendManager.cpp  FriendManager.h
src/leaderboard/: LeaderboardManager.cpp  LeaderboardManager.h
src/lobby/: Lobby.cpp  Lobby.h  LobbyManager.cpp  LobbyManager.h
src/match/: MatchManager.cpp  MatchManager.h
src/matchmaking/: Matchmaker.cpp  Matchmaker.h  Queue.cpp  Queue.h
src/network/: Connection.cpp  Connection.h  Packet.h  SessionManager.h  TCPServer.cpp  TCPServer.h
src/party/: PartyManager.cpp  PartyManager.h
src/redis/: RedisClient.cpp  RedisClient.h
tests/: test_v2_features.py
